--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
       </div>
     </div>
 
-    <audio id="music" preload="auto">
-      <source src="assets/my_song.mp3" type="audio/mpeg" />
-    </audio>
+    <audio id="music" src="assets/my_song.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
   </body>
